@@ -4,8 +4,6 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.fail;
 import static org.junit.jupiter.api.Assumptions.assumeTrue;
 
-import com.google.common.collect.ImmutableList;
-import io.dropwizard.testing.junit5.DropwizardAppExtension;
 import java.io.IOException;
 import java.time.Instant;
 import java.util.ArrayList;
@@ -22,8 +20,19 @@ import mil.dds.anet.beans.Report.ReportState;
 import mil.dds.anet.beans.ReportAction;
 import mil.dds.anet.beans.ReportAction.ActionType;
 import mil.dds.anet.beans.ReportPerson;
-import mil.dds.anet.config.AnetConfiguration;
+import mil.dds.anet.config.AnetConfig;
+import mil.dds.anet.config.AnetDictionary;
+import mil.dds.anet.config.ApplicationContextProvider;
+import mil.dds.anet.database.AdminDao;
+import mil.dds.anet.database.ApprovalStepDao;
+import mil.dds.anet.database.EmailAddressDao;
+import mil.dds.anet.database.EmailDao;
+import mil.dds.anet.database.JobHistoryDao;
+import mil.dds.anet.database.OrganizationDao;
 import mil.dds.anet.database.PersonDao;
+import mil.dds.anet.database.ReportActionDao;
+import mil.dds.anet.database.ReportDao;
+import mil.dds.anet.test.SpringTestConfig;
 import mil.dds.anet.test.integration.config.AnetTestConfiguration;
 import mil.dds.anet.test.integration.utils.EmailResponse;
 import mil.dds.anet.test.integration.utils.FakeSmtpServer;
@@ -39,12 +48,42 @@ import org.junit.jupiter.api.TestInstance;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 
-@SpringBootTest
+@SpringBootTest(classes = SpringTestConfig.class)
 @TestInstance(TestInstance.Lifecycle.PER_CLASS)
 class ReportPublicationWorkerTest {
 
   @Autowired
-  protected DropwizardAppExtension<AnetConfiguration> dropwizardApp;
+  protected AnetConfig config;
+
+  @Autowired
+  protected AnetDictionary dict;
+
+  @Autowired
+  private JobHistoryDao jobHistoryDao;
+
+  @Autowired
+  private AdminDao adminDao;
+
+  @Autowired
+  private ApprovalStepDao approvalStepDao;
+
+  @Autowired
+  private EmailDao emailDao;
+
+  @Autowired
+  private EmailAddressDao emailAddressDao;
+
+  @Autowired
+  private OrganizationDao organizationDao;
+
+  @Autowired
+  private PersonDao personDao;
+
+  @Autowired
+  private ReportDao reportDao;
+
+  @Autowired
+  private ReportActionDao reportActionDao;
 
   private final List<String> expectedIds = new ArrayList<>();
   private final List<String> unexpectedIds = new ArrayList<>();
@@ -59,27 +98,25 @@ class ReportPublicationWorkerTest {
   @BeforeAll
   @SuppressWarnings("unchecked")
   void setUpClass() throws Exception {
-    final AnetConfiguration configuration = dropwizardApp.getConfiguration();
-    final Map<String, Object> dictionary = new HashMap<>(configuration.getDictionary());
+    final Map<String, Object> newDict = new HashMap<>(dict.getDictionary());
     final Map<String, Object> reportWorkflowSettings =
-        (Map<String, Object>) dictionary.get("reportWorkflow");
+        (Map<String, Object>) newDict.get("reportWorkflow");
     // Make sure publication is immediate
     reportWorkflowSettings.put("nbOfHoursQuarantineApproved", 0);
-    configuration.setDictionary(dictionary);
+    dict.setDictionary(newDict);
 
-    if (configuration.getSmtp().isDisabled()) {
+    if (config.getSmtp().isDisabled()) {
       fail("'ANET_SMTP_DISABLE' system environment variable must have value 'false' to run test.");
     }
 
     executeEmailServerTests = Boolean.parseBoolean(
         AnetTestConfiguration.getConfiguration().get("emailServerTestsExecute").toString());
 
-    allowedEmail = "@" + ((List<String>) configuration.getDictionaryEntry("domainNames")).get(0);
+    allowedEmail = "@" + ((List<String>) dict.getDictionaryEntry("domainNames")).get(0);
 
-    final AnetObjectEngine engine = AnetObjectEngine.getInstance();
-    emailWorker = new AnetEmailWorker(configuration, engine.getEmailDao());
-    reportPublicationWorker = new ReportPublicationWorker(configuration, engine.getReportDao());
-    emailServer = new FakeSmtpServer(configuration.getSmtp());
+    emailWorker = new AnetEmailWorker(config, dict, jobHistoryDao, emailDao, adminDao);
+    reportPublicationWorker = new ReportPublicationWorker(dict, jobHistoryDao, reportDao);
+    emailServer = new FakeSmtpServer(config.getSmtp());
 
     // Flush all reports from previous tests
     reportPublicationWorker.run();
@@ -108,13 +145,12 @@ class ReportPublicationWorkerTest {
 
   @Test
   void testApprovalStepReport() {
-    final AnetObjectEngine engine = AnetObjectEngine.getInstance();
     final Report report = createTestReport("testApprovalStepReport_1");
     final ApprovalStep step = report.getApprovalStep();
     step.setType(ApprovalStepType.REPORT_APPROVAL);
-    engine.getApprovalStepDao().insert(step);
+    approvalStepDao.insert(step);
     report.setApprovalStep(step);
-    engine.getReportDao().update(report);
+    reportDao.update(report);
 
     // Report in approve step
     final ReportAction ra = new ReportAction();
@@ -122,7 +158,7 @@ class ReportPublicationWorkerTest {
     ra.setStep(step);
     ra.setType(ActionType.APPROVE);
     ra.setCreatedAt(Instant.now());
-    engine.getReportActionDao().insert(ra);
+    reportActionDao.insert(ra);
 
     expectedIds.add("testApprovalStepReport_1");
 
@@ -134,13 +170,12 @@ class ReportPublicationWorkerTest {
 
   @Test
   void testPlanningApprovalStepReport() {
-    final AnetObjectEngine engine = AnetObjectEngine.getInstance();
     final Report report = createTestReport("testPlanningApprovalStepReport_1");
     final ApprovalStep step = report.getApprovalStep();
     step.setType(ApprovalStepType.PLANNING_APPROVAL);
-    engine.getApprovalStepDao().insert(step);
+    approvalStepDao.insert(step);
     report.setApprovalStep(step);
-    engine.getReportDao().update(report);
+    reportDao.update(report);
 
     // Report in planning approve step
     final ReportAction ra = new ReportAction();
@@ -148,7 +183,7 @@ class ReportPublicationWorkerTest {
     ra.setStep(step);
     ra.setType(ActionType.APPROVE);
     ra.setCreatedAt(Instant.now());
-    engine.getReportActionDao().insert(ra);
+    reportActionDao.insert(ra);
 
     expectedIds.add("testPlanningApprovalStepReport_1");
 
@@ -160,10 +195,9 @@ class ReportPublicationWorkerTest {
 
   @Test
   void testAutomaticallyApprovedReport() {
-    final AnetObjectEngine engine = AnetObjectEngine.getInstance();
     final Report report = createTestReport("testAutomaticallyApprovedReport_1");
     report.setApprovalStep(null);
-    engine.getReportDao().update(report);
+    reportDao.update(report);
 
     // Report in automatic approve step (no planning workflow)
     final ReportAction ra = new ReportAction();
@@ -171,7 +205,7 @@ class ReportPublicationWorkerTest {
     ra.setType(ActionType.APPROVE);
     ra.setPlanned(true);
     ra.setCreatedAt(Instant.now());
-    engine.getReportActionDao().insert(ra);
+    reportActionDao.insert(ra);
 
     expectedIds.add("testAutomaticallyApprovedReport_1");
 
@@ -182,8 +216,8 @@ class ReportPublicationWorkerTest {
   }
 
   private void testReportPublished(final String uuid, final boolean expectedPlanned) {
-    final AnetObjectEngine engine = AnetObjectEngine.getInstance();
-    final Report updatedReport = engine.getReportDao().getByUuid(uuid);
+    final AnetObjectEngine engine = ApplicationContextProvider.getEngine();
+    final Report updatedReport = reportDao.getByUuid(uuid);
     assertThat(updatedReport.getState()).isEqualTo(ReportState.PUBLISHED);
     final List<ReportAction> workflow = updatedReport.loadWorkflow(engine.getContext()).join();
     assertThat(workflow).isNotEmpty();
@@ -194,10 +228,9 @@ class ReportPublicationWorkerTest {
 
   // DB integration
   private void testReportPublicationWorker(final int expectedCount) {
-    final AnetObjectEngine engine = AnetObjectEngine.getInstance();
-    final int emailSize = engine.getEmailDao().getAll().size();
+    final int emailSize = emailDao.getAll().size();
     reportPublicationWorker.run();
-    assertThat(engine.getEmailDao().getAll()).hasSize(emailSize + expectedCount);
+    assertThat(emailDao.getAll()).hasSize(emailSize + expectedCount);
   }
 
   // Email integration
@@ -214,26 +247,24 @@ class ReportPublicationWorkerTest {
   }
 
   private Report createTestReport(final String toAddressId) {
-    final AnetObjectEngine engine = AnetObjectEngine.getInstance();
     final ReportPerson author =
         AbstractResourceTest.personToReportAuthor(TestBeans.getTestPerson());
-    engine.getPersonDao().insert(author);
+    personDao.insert(author);
     final EmailAddress emailAddress =
         new EmailAddress(Utils.getEmailNetworkForNotifications(), toAddressId + allowedEmail);
-    engine.getEmailAddressDao().updateEmailAddresses(PersonDao.TABLE_NAME, author.getUuid(),
+    emailAddressDao.updateEmailAddresses(PersonDao.TABLE_NAME, author.getUuid(),
         List.of(emailAddress));
 
     final Organization organization = TestBeans.getTestOrganization();
-    engine.getOrganizationDao().insert(organization);
+    organizationDao.insert(organization);
 
     final ApprovalStep approvalStep = TestBeans.getTestApprovalStep(organization);
     approvalStep.setType(ApprovalStepType.PLANNING_APPROVAL);
-    engine.getApprovalStepDao().insertAtEnd(approvalStep);
+    approvalStepDao.insertAtEnd(approvalStep);
 
-    final Report report =
-        TestBeans.getTestReport(toAddressId, null, approvalStep, ImmutableList.of(author));
+    final Report report = TestBeans.getTestReport(toAddressId, null, approvalStep, List.of(author));
     report.setState(ReportState.APPROVED);
-    engine.getReportDao().insert(report);
+    reportDao.insert(report);
     return report;
   }
 }
