@@ -3,33 +3,31 @@ package mil.dds.anet.test.resources;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.fail;
 
-import com.google.common.collect.ImmutableMap;
 import graphql.introspection.IntrospectionQueryBuilder;
-import jakarta.ws.rs.client.Entity;
-import jakarta.ws.rs.client.Invocation.Builder;
-import jakarta.ws.rs.core.GenericType;
-import jakarta.ws.rs.core.MediaType;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
-import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
-import java.util.Base64;
 import java.util.HashMap;
 import java.util.Map;
 import mil.dds.anet.test.client.Person;
 import mil.dds.anet.test.client.Query;
-import mil.dds.anet.utils.Utils;
 import org.apache.commons.io.IOUtils;
 import org.junit.jupiter.api.Test;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.core.ParameterizedTypeReference;
+import org.springframework.web.reactive.function.client.WebClient;
 
 class GraphQlResourceTest extends AbstractResourceTest {
 
   private static final Logger logger =
       LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
+
+  @Autowired
+  private WebClient webClient;
 
   @Test
   void testIntrospection() {
@@ -63,24 +61,10 @@ class GraphQlResourceTest extends AbstractResourceTest {
 
   @Test
   void testGraphQlFiles() {
-    final Person jack = withCredentials(jackUser,
-        t -> queryExecutor.me("{ uuid attendedReports { list { uuid } } }"));
-    final Person steve = getSteveSteveson();
+    final Map<String, Object> variables = getVariables();
     final File testDir = new File(GraphQlResourceTest.class.getResource("/graphQLTests").getFile());
     assertThat(testDir.getAbsolutePath()).isNotNull();
     assertThat(testDir).isDirectory();
-
-    Map<String, Object> variables = new HashMap<>();
-    variables.put("personUuid", jack.getUuid());
-    variables.put("positionUuid", steve.getPosition().getUuid());
-    variables.put("orgUuid", steve.getPosition().getOrganization().getUuid());
-    variables.put("taskUuid", "7b2ad5c3-018b-48f5-b679-61fbbda21693"); // 1.1.A
-    variables.put("searchQuery", "hospital");
-    variables.put("reportUuid", jack.getAttendedReports().getList().get(0).getUuid());
-    variables.put("pageNum", 0);
-    variables.put("pageSize", 10);
-    variables.put("maxResults", 6);
-    logger.info("Using variables {}", variables);
 
     final File[] fileList = testDir.listFiles();
     assertThat(fileList).isNotNull();
@@ -93,64 +77,51 @@ class GraphQlResourceTest extends AbstractResourceTest {
             raw = raw.replace("${" + entry.getKey() + "}", entry.getValue().toString());
           }
           query.put("query", "query { " + raw + "}");
-          query.put("variables", ImmutableMap.of());
+          query.put("variables", Map.of());
           logger.info("Processing file {}", f);
 
           // Test POST request
           final Map<String, Object> respPost =
-              httpQuery(null, admin).post(Entity.json(query), new GenericType<>() {});
+              withCredentials(adminUser, t -> webClient.post().bodyValue(query).retrieve()
+                  .bodyToMono(new ParameterizedTypeReference<Map<String, Object>>() {}).block());
           doAsserts(f, respPost);
-
-          // Test GET request
-          final Map<String, Object> respGet =
-              httpQuery("query=" + URLEncoder.encode("{" + raw + "}", StandardCharsets.UTF_8),
-                  admin).get(new GenericType<>() {});
-          doAsserts(f, respGet);
-
-          // POST and GET responses should be equal
-          assertThat(respPost.get("data")).isEqualTo(respGet.get("data"));
-
-          // Test GET request over XML
-          final String respGetXml = httpQuery(
-              "output=xml&query=" + URLEncoder.encode("{" + raw + "}", StandardCharsets.UTF_8),
-              admin).get(new GenericType<>() {});
-          assertThat(respGetXml).isNotNull();
-          int len = respGetXml.length();
-          assertThat(len).isPositive();
-          assertThat(respGetXml.substring(0, 1)).isEqualTo("<");
-          String xmlHeader = "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"no\"?>";
-          assertThat(respGetXml.substring(0, xmlHeader.length())).isEqualTo(xmlHeader);
-          assertThat(respGetXml.substring(len - 2, len)).isEqualTo(">\n");
 
           // Test POST request over XML
           query.put("output", "xml");
-          final String respPostXml =
-              httpQuery(null, admin).post(Entity.json(query), new GenericType<>() {});
-
-          // POST and GET responses over XML should be equal
-          assertThat(respPostXml).isEqualTo(respGetXml);
-
-          // Test GET request over XLSX
-          // Note: getting the resulting XLSX as String is a quick & easy hack
-          final String respGetXlsx = httpQuery(
-              "output=xlsx&query=" + URLEncoder.encode("{" + raw + "}", StandardCharsets.UTF_8),
-              admin).get(new GenericType<>() {});
-          assertThat(respGetXlsx).isNotNull();
-          assertThat(respGetXlsx).isNotEmpty();
+          final String respPostXml = withCredentials(adminUser,
+              t -> webClient.post().bodyValue(query).retrieve().bodyToMono(String.class).block());
+          assertThat(respPostXml).isNotNull();
+          assertThat(respPostXml).isNotEmpty();
 
           // Test POST request over XLSX
           query.put("output", "xlsx");
-          final String respPostXlsx =
-              httpQuery(null, admin).post(Entity.json(query), new GenericType<>() {});
+          final String respPostXlsx = withCredentials(adminUser,
+              t -> webClient.post().bodyValue(query).retrieve().bodyToMono(String.class).block());
           assertThat(respPostXlsx).isNotNull();
           assertThat(respPostXlsx).isNotEmpty();
-          // Note: can't compare respGetXlsx and respPostXlsx directly, as they will be different,
-          // unfortunately
         } catch (IOException e) {
           fail("Unable to read file ", e);
         }
       }
     }
+  }
+
+  private Map<String, Object> getVariables() {
+    final Person jack = withCredentials(jackUser,
+        t -> queryExecutor.me("{ uuid attendedReports { list { uuid } } }"));
+    final Person steve = getSteveSteveson();
+    Map<String, Object> variables = new HashMap<>();
+    variables.put("personUuid", jack.getUuid());
+    variables.put("positionUuid", steve.getPosition().getUuid());
+    variables.put("orgUuid", steve.getPosition().getOrganization().getUuid());
+    variables.put("taskUuid", "7b2ad5c3-018b-48f5-b679-61fbbda21693"); // 1.1.A
+    variables.put("searchQuery", "hospital");
+    variables.put("reportUuid", jack.getAttendedReports().getList().get(0).getUuid());
+    variables.put("pageNum", 0);
+    variables.put("pageSize", 10);
+    variables.put("maxResults", 6);
+    logger.info("Using variables {}", variables);
+    return variables;
   }
 
   private void doAsserts(File f, Map<String, Object> resp) {
@@ -159,22 +130,6 @@ class GraphQlResourceTest extends AbstractResourceTest {
         .as("Has Errors on %s : %s, %s", f.getName(), resp.get("errors"), resp.values().toString())
         .isFalse();
     assertThat(resp.containsKey("data")).as("Missing Data on " + f.getName(), resp).isTrue();
-  }
-
-  /*
-   * Helper method to build httpQuery with authentication and Accept headers.
-   */
-  private Builder httpQuery(String query, Person authUser) {
-    final String authString = Base64.getEncoder().encodeToString(
-        (authUser.getDomainUsername() + ":" + authUser.getDomainUsername()).getBytes());
-    final StringBuilder url = new StringBuilder(graphqlEndpoint);
-    if (!Utils.isEmptyOrNull(query)) {
-      url.append("?");
-      url.append(query);
-    }
-    return testClient.target(url.toString()).request()
-        .header("Authorization", "Basic " + authString)
-        .header("Accept", MediaType.APPLICATION_JSON_TYPE.toString());
   }
 
 }
